Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -2741,7 +2741,6 @@ font-weight: bold !important;
 .custom_ui_13884_13886 .coinType12273 i.zq12273,
 .custom_ui_13884_13886 .coinType6255 i.zq6255,
 .custom_ui_13884_13886 .btn-12273 i.zq12273,
-.custom_ui_13884_13886 .btn-6255 i.zq6255,
 .custom_ui_13884_13886 .nav-title i,
 .custom_ui_13884_13886 .controller-nav i,
 .custom_ui_13884_13886 .controller-nav,
@@ -2874,7 +2873,6 @@ font-weight: bold !important;
 .custom_ui_13884_13885 .coinType12273 i.zq12273,
 .custom_ui_13884_13885 .coinType6255 i.zq6255,
 .custom_ui_13884_13885 .btn-12273 i.zq12273,
-.custom_ui_13884_13885 .btn-6255 i.zq6255,
 .custom_ui_13884_13885 .new-note:not(.editing-mode),
 .custom_ui_13884_13885 .controller-nav i,
 .custom_ui_13884_13885 .controller-nav,
